# quantum-computing

./: .gitignore  Guardfile  README.markdown  drill3.2.2.classic-two-slit.example  pom.xml  quantum.cabal  stack.yaml
app/: BooleanMarbleSimulation.hs  ClassicalMultiSlitExperimentSimulation.hs  Complexplane.hs  FractionMarbleSimulation.hs  Main.hs
drill1_3_2_sketch/: drill1_3_2_sketch.pde
haskell/: drill_1_1_1  drill_1_1_1.hs
src/: CalculationService.hs  CalculationServices.hs  Complex.hs  Lib.hs  Matrix.hs  Vector.hs
src/main/scala/com.balopat.qc/: ComplexNumber.scala
src/test/scala/com.balopat.qc/: ComplexNumberCartesianSpec.scala  ComplexNumberPolarSpec.scala  ComplexNumberSpec.scala
test/: CalculationServiceSpec.hs  ComplexSpec.hs  Main.hs  MatrixSpec.hs  Spec.hs  VectorSpec.hs
web/: complex.js  index.html
web/hello/: hello.pde
web/static/complexplane/: complexplane.pde
web/static/hello/: hello.pde
web/static/js/: complexplane.js
