name:                quantum
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CalculationService, Complex, Vector, Matrix
  build-depends:       base >= 4.7
                      , text
                      , happstack-server
                      , json
                      , split
                      , aeson
                      , bytestring
  default-language:    Haskell2010

executable complexplane
  hs-source-dirs:      app
  main-is:             Complexplane.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , quantum
                     , happstack-server
                     , json
                     , bytestring
                     , transformers
                     , aeson
  default-language:    Haskell2010

executable boolmarbles
    hs-source-dirs:      app
    main-is:             BooleanMarbleSimulation.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , quantum
                       , split
                       , transformers
    default-language:    Haskell2010
    
executable fractionmarbles
        hs-source-dirs:      app
        main-is:             FractionMarbleSimulation.hs
        ghc-options:         -threaded -rtsopts -with-rtsopts=-N
        build-depends:       base
                           , quantum
                           , split
                           , transformers
        default-language:    Haskell2010
        
executable classicmultislit
        hs-source-dirs:      app
        main-is:             ClassicalMultiSlitExperimentSimulation.hs
        ghc-options:         -threaded -rtsopts -with-rtsopts=-N
        build-depends:       base
                           , quantum
                           , split
                           , transformers
        default-language:    Haskell2010


test-suite quantum-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quantum
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , hspec
                     , QuickCheck
                     , aeson
                     , json
                     , bytestring
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
